MDEV-7369: MariaDB build fails when XTRADB_STORAGE_ENGINE enabled

Patch by James Taylor.